--- a/clase/index.html
+++ b/clase/index.html
@@ -13,61 +13,73 @@
 
 <body onload="carga()">
 
-    <div class="container ">
-        <div class="row justify-content-center ">
-            <div class="col6" id="wallet">
-                <div>
-                    <input class="balance" type="number">
-                    <select class="coins" name=""></select>
-                </div>
-                <div>
-                    <input class="balance" type="number">
-                    <select class="coins" name=""></select>
-                </div>
-                <div>
-                    <input class="balance" type="number">
-                    <select class="coins" name=""></select>
-                </div>
-                <div>
-                    <input class="balance" type="number">
-                    <select class="coins" name=""></select>
-                </div>
-                <hr>
-                <div>
-                    <input id="totalbalance" type="number">
-                    <select name="">
-                                                    <option value="USD" >USD</option>
-                                            </select>
-                </div>
-            </div>
-
-            <div class="col6" id="transfers">
-                <div class="row">
-                    <div class="col">
-                        <input type="number" name="" id="amount-transfer" value="0">
-                        <select class="coinsTransfer" name="" id="transfer1"></select>
+    <div class="card">
+        <div class="card-header">
+            Ejemplo
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Crypto currency wallet</h5>
+            <div class="container ">
+                <div class="row justify-content-center ">
+                    <div class="col-6" id="wallet">
+                        <div class="form-row form-group">
+                            <input class="col-6 col-form-label form-control balance" type="number" readonly placeholder="Balance">
+                            <select class="col-6 form-control coins" name=""></select>
+                        </div>
+                        <div class="form-group form-row">
+                            <input class="col-6 form-control balance" type="number" readonly placeholder="Balance">
+                            <select class="col-6 form-control coins" name=""></select>
+                        </div>
+                        <div class="form-group form-row">
+                            <input class="col-6 form-control balance" type="number" readonly placeholder="Balance">
+                            <select class="col-6 form-control coins" name=""></select>
+                        </div>
+                        <div class="form-group form-row">
+                            <input class="col-6 form-control balance" type="number" readonly placeholder="Balance">
+                            <select class="col-6 form-control coins" name=""></select>
+                        </div>
+                        <hr>
+                        <div class="form-group form-row">
+                            <input id="totalbalance" class="col-6 form-control" type="number" readonly placeholder="Greate Balance">
+                            <select name="" class="col-6 form-control">
+                                        <option value="USD" >USD</option>
+                                    </select>
+                        </div>
                     </div>
 
+                    <div class="col-6" id="transfers">
+                        <div class="form-row form-group">
 
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <input type="number" name="" id="">
-                        <select class="coinsTransfer" name="" id="transfer2"></select>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col6">
-                        <button id="transfer" type="submit" class="btn btn-bg-primary" onclick="Transfer()">Transfer</button>
+                            <input class="col-6 col-form-label form-control" type="number" name="" id="amount-transfer" value="0">
+                            <select class="col-6 form-control coinsTransfer" name="" id="transfer1"></select>
+
+
+                        </div>
+                        <div class="form-row form-group">
+                            <label class=" col-6 col-form-label" style="text-align:end;" for="transfer2">Transfer to:</label>
+                            <!-- <input class="col-6 col-form-label form-control" type="number" name="" id=""> -->
+                            <select class=" col-6 form-control coinsTransfer" name="" id="transfer2"></select>
+
+                        </div>
+                        <div class="form-row form-group justify-content-end">
+                            <div class="col" style="display:  flex;justify-content: flex-end;">
+                                <button id="transfer" type="submit" class="btn btn-primary" onclick="Transfer()">Transfer</button>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
 
 
             </div>
         </div>
-
-
+        <div class="card-footer">
+            <h6>Creado por Acid Android</h6>
+        </div>
     </div>
+
+
 
 
 
@@ -89,15 +101,9 @@
 
         function carga(params) {
 
-            console.log(cartera);
-
             fillOptions()
             fillBalances()
             TotalBalance()
-
-
-
-
 
         }
 
@@ -117,8 +123,8 @@
             account1 = cartera.accounts.filter(obj => obj.getSymbol() === document.getElementById("transfer1").value)
             account2 = cartera.accounts.filter(obj => obj.getSymbol() === document.getElementById("transfer2").value)
 
-            console.log(account1[0])
-            console.log(account2[0])
+            // console.log(account1[0])
+            // console.log(account2[0])
             account1[0].transfer(account1[0], account2[0], amount);
 
             TotalBalance()
@@ -130,7 +136,7 @@
             for (let index = 0; index < cartera.accounts.length; index++) {
                 console.log(document.getElementsByClassName("balance")[index])
                 accountBalances[index].value = cartera.accounts[index].getBalance()
-                options[index].innerHTML = "<option " + cartera.accounts[index].getSymbol() + "</option>"
+                options[index].innerHTML = "<option>" + cartera.accounts[index].getSymbol() + "</option>"
             }
 
         }
